--- a/proj3_flask/templates/proj3.html
+++ b/proj3_flask/templates/proj3.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <form action = "http://127.0.0.1:5000/run" method = "POST">
+    <form action = "/" method = "POST">
         성별 선택 :
         <input type="radio" name="SEX" value="2"> 여성
         <input type="radio" name="SEX" value="1"> 남성 <br>
